@@ -37,6 +37,8 @@ Version 0.9
 
 - Added 256-color terminal formatter.
 
+- Added an experimental SVG formatter.
+
 - Added the ``lineanchors`` option to the HTML formatter, thanks to
   Ian Charnas for the idea.
 
